network-policy/ipblock-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-policy
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/24
